Replace `FastestLapWithContext` and `LapWithContext` with `LapsWithContext`, update associated services, commands, and tests for refactored lap handling.